updating with csv format

--- a/VVeb.UQ/www/index.html
+++ b/VVeb.UQ/www/index.html
@@ -136,7 +136,7 @@
               </div>
               <!-- Netcdf example -->
               <div style="display: table-cell; text-align: left;">
-                <p>The input file must contain data with corresponding errors and the number of samples to be run. Here is a simple example of how to generate such an iput file.</p><br/>
+                <p>The input file must contain data with corresponding errors and the number of samples to be run. Here is a simple example of how to generate such an input file.</p><br/>
                 <button onclick="download_user_example();">user example</button>
                 <p>This will be the only thing passed to your container. Any other input you require must come from within the container itself.</p>
               </div>
