updating info about /work_dir/ structure for containers

--- a/VVeb.UQ/www/index.html
+++ b/VVeb.UQ/www/index.html
@@ -93,7 +93,7 @@
               <!-- Docker image example -->
               <div style="display: table-cell; text-align: left;">
                 <p>The code image must be run in a certain way.
-                   Particularly, the WORKDIR must be called /work_dir/ and it must be left empty (because it will be mounted externally).
+                   Particularly, the WORKDIR must be called /tmp/work_dir/ and it must be left empty (because it will be mounted externally).
                    Here is a very simple example of a Docker image with the correct configuration:
                 </p>
                 <button onclick="download_user_example();">user example</button>
