--- a/VVeb.UQ/www/index.html
+++ b/VVeb.UQ/www/index.html
@@ -119,7 +119,26 @@
               <div style="display: table-cell; text-align: left;">
                 <p id="cloud_comments"></p>
               </div>
-	      <button id="prominence_token_button" onclick="request_prominence_token();">Request New<br/>Prominence Token</button><br/>
+	      <button id="prominence_token_button" onclick="request_prominence_token();">Request New<br/>Prominence Token</button><br/><br/>
+              <select id="cpu_selector" onchange="cpu_select(this)">
+                <option value="select_n_cpu">select number of CPU</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+              </select>
             </div>
           </div>
         </div>
