--- a/VVeb.UQ/www/index.html
+++ b/VVeb.UQ/www/index.html
@@ -45,12 +45,12 @@
       <h1>VVeb.UQ CCFE</h1>
 
       <!-- Left Logo: get back to main page -->
-      <a href="index.html" style="position:absolute; left:10px; top:10px; height: 100px; border: 5px solid white;">
+      <a id="home_link" href="index.html" style="position:absolute; left:10px; top:10px; height: 100px; border: 5px solid white;">
         <img src="Logos/MAST_fast_cam.png" style="height: 70.0%;"/><br />Home
       </a>
 
       <!-- Right Logo: go to CCFE web page -->
-      <a href="http://www.ccfe.ac.uk/index.aspx" style="position:absolute; right:10px; top:10px; height: 100px; border: 5px solid white;">
+      <a href="https://ccfe.ukaea.uk/research/advanced-computing/" style="position:absolute; right:10px; top:10px; height: 100px; border: 5px solid white;">
         <img src="Logos/ccfe.jpg" style="height: 70.0%;"/><br />CCFE home
       </a>
 
