adding option for RAM size in Prominence

--- a/VVeb.UQ/www/default_page/index.html
+++ b/VVeb.UQ/www/default_page/index.html
@@ -144,6 +144,18 @@
                 <option value="15">15</option>
                 <option value="16">16</option>
               </select>
+	      <br/>
+              <select id="RAM_selector" onchange="RAM_select(this)">
+                <option value="select_RAM">select RAM/instance (GB)</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="4">4</option>
+                <option value="8">8</option>
+                <option value="16">16</option>
+                <option value="32">32</option>
+                <option value="64">64</option>
+                <option value="128">128</option>
+              </select>
             </div>
           </div>
         </div>
