adding URLs for download

--- a/VVeb.UQ/www/default_page/index.html
+++ b/VVeb.UQ/www/default_page/index.html
@@ -266,6 +266,7 @@
               <div style="display: table-cell; text-align: left;">
                 <p>Retrieve files</p>
                 <button id="download_entire_run" onclick="download_entire_run()">download everything</button>
+                <button id="get_download_urls" onclick="get_download_urls()">get download URLs</button>
                 <button id="download_selected_files" onclick="download_selected_files()">download selected files</button>
                 <div id="retrieve_comments" style="font-weight:normal; font-size:70%; overflow-x:scroll; overflow-y:scroll;">
                   <p>The following files were selected for download:</p><br/>
