--- a/VVeb.UQ/www/index.html
+++ b/VVeb.UQ/www/index.html
@@ -5,7 +5,7 @@
   <head>
 
     <!-- Title -->
-    <title>VVeb.UQ CCFE</title>
+    <title>VVeb.UQ</title>
 
     <!-- CSS Style -->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
@@ -28,17 +28,7 @@
     <div id="wrapper">
 
       <!-- Welcome -->
-      <h1>VVeb.UQ CCFE</h1>
-
-      <!-- Left Logo: get back to main page -->
-      <a href="index.html" style="position:absolute; left:10px; top:10px; height: 100px; border: 5px solid white;">
-        <img src="Logos/MAST_fast_cam.png" style="height: 70.0%;"/><br />Home
-      </a>
-
-      <!-- Right Logo: go to CCFE web page -->
-      <a href="https://ccfe.ukaea.uk/research/advanced-computing/" style="position:absolute; right:10px; top:10px; height: 100px; border: 5px solid white;">
-        <img src="Logos/ccfe.jpg" style="height: 70.0%;"/><br />CCFE home
-      </a>
+      <img src="../Logos/VVebUQ_logo.png" style="height: 150px;"/>
 
       <!-- Log-in form -->
       <div style="width: 100%; display: table;">
