--- a/VVeb.UQ/www/index.html
+++ b/VVeb.UQ/www/index.html
@@ -54,7 +54,9 @@
     <!-- Email Contact -->
     <br/> <br/> <br/>
     <div id="contact" style="position:absolute; bottom:10px;">
-      Contact: <a href="mailto:stanislas.pamela@ukaea.uk">Stanislas Pamela</a> and <a href="mailto:james.buchanan@ukaea.uk">James Buchanan</a>
+      Contact: <a href="mailto:stanislas.pamela@ukaea.uk">Stan Pamela</a> and <a href="mailto:james.buchanan@ukaea.uk">James Buchanan</a>
+      <br/>
+      Wiki: <a href="https://github.com/ukaea/ALC_UQ/wiki/VVeb.UQ">https://github.com/ukaea/ALC_UQ/wiki/VVeb.UQ</a>
     </div>
 
     <!-- Cookies approval WILL NEED TO BE DONE !!! -->
