--- a/VVeb.UQ/www/default_page/index.html
+++ b/VVeb.UQ/www/default_page/index.html
@@ -34,8 +34,8 @@
         <p><br/></p>
         <p id="waiting_message">Page loading, please wait...</p>
 	<img id="waiting_gif" src="../Logos/VVebUQ_waiting_gif.gif" alt="waiting-gif"><br/><br/>
-        <button class="waiting_div_buttons" id="action_wrapper_button" onclick="action_wrapper();">action</button>
-        <button class="waiting_div_buttons" id="button_hide_waiting_div_upload" onclick="hide_waiting_div();">close</button><br/>
+        <button class="waiting_div_buttons" id="action_wrapper_button" onclick="action_wrapper();" style="visibility:hidden;">action</button>
+        <button class="waiting_div_buttons" id="button_hide_waiting_div_upload" onclick="hide_waiting_div();" style="visibility:hidden;">close</button><br/>
         <div id="terminal_output"></div>
       <span>
     </div>
