--- a/VVeb.UQ/www/default_page/index.html
+++ b/VVeb.UQ/www/default_page/index.html
@@ -255,7 +255,7 @@
     <div id="contact" style="position:absolute; bottom:10px;">
       Contact: <a href="mailto:stanislas.pamela@ukaea.uk">Stan Pamela</a> and <a href="mailto:james.buchanan@ukaea.uk">James Buchanan</a>
       <br/>
-      Wiki: <a href="https://github.com/ukaea/ALC_UQ/wiki/VVeb.UQ">https://github.com/ukaea/ALC_UQ/wiki/VVeb.UQ</a>
+      Documentation: <a href="https://github.com/ukaea/ALC_UQ/blob/master/VVeb.UQ/README.md">https://github.com/ukaea/ALC_UQ/blob/master/VVeb.UQ/README.md</a>
     </div>
 
     <!-- Cookies approval WILL NEED TO BE DONE !!! -->
